<resources>
    <string name="app_name">Paw Print</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="history_toolbar_text">History</string>
    <string name="profile_toolbar_text">Profile</string>
    <string name="email_tf_hint">Email</string>
    <string name="password_tf_hint">Password</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="log_in_text">Log In</string>
    <string name="dog_name_tf_hint">Dog Name</string>
    <string name="dog_loc_tf_hint">Last Seen (Location)</string>
    <string name="new_lost_dog_post_toolbar_text">Report a New Lost Dog</string>
    <string name="dog_contact_number">Contact Number</string>
    <string name="dog_additional_info">Additional Information</string>
    <string name="profile_name_tv">Name: </string>
    <string name="profile_email_tv">Email: </string>
    <string name="name_tf_hint">Name</string>
    <string name="login_error_text">Incorrect Email and/or Password.</string>
    <string name="login_error_wrong_password">Incorrect Password</string>
    <string name="login_error_wrong_email">Account does not exit</string>
    <string name="dog_poster_firebase_path">LostDogs</string>
    <string name="dog_poster_geofire_path">GeoFireDog</string>
    <string name="firebase_user_path">users</string>
</resources>
