<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".view.Login">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pawprintwithtext"
            android:id="@+id/app_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/login_email_til"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/app_logo"
            android:hint="@string/email_tf_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/login_email_et"
                android:imeOptions="actionNext"
                android:lines="1"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/email_icon"
                android:nextFocusForward="@id/login_password_et"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/login_password_til"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_email_til"
            app:errorEnabled="true"
            android:hint="@string/password_tf_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/login_password_et"
                android:imeOptions="actionDone"
                android:lines="1"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/password_icon"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="81dp"
            android:layout_height="89dp"
            android:id="@+id/loginProgressBar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/app_logo"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toBottomOf="@+id/login_password_til"/>
    <TextView
            android:text="@string/login_error_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_error"
            android:textAlignment="center"
            android:visibility="invisible"
            android:textColor="@color/ColorError"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp" app:layout_constraintBottom_toTopOf="@+id/login_email_til"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/sign_up_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/signUp_button"
                android:textSize="35sp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="#fff"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:cornerRadius="40dp"
        />
        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/log_in_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/login_button"
                android:textSize="35sp"
                android:textColor="#fff"
                app:cornerRadius="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/ColorSecondaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>