<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        tools:context=".view.SignUp"
        android:focusable="true">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/signUp_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_toolbar_text"
            android:textColor="#000"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/signUp_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/signUp_toolbar"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/signUp_toolbar"
            app:layout_constraintBottom_toBottomOf="@+id/signUp_toolbar"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signUp_email_til"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/signUp_name_til"
            android:hint="@string/email_tf_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/signUp_email_et"
                android:imeOptions="actionNext"
                android:lines="1"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/email_icon"
                android:nextFocusForward="@id/login_password_et"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/signUp_name_til"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/signUp_toolbar"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="30dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/name_tf_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/signUp_name_et"
                android:imeOptions="actionNext"
                android:lines="1"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/profile_icon"
                android:nextFocusForward="@id/login_email_et"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/signUp_password"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/signUp_email_til"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password_tf_hint"
            app:errorEnabled="true"
            app:counterEnabled="true"
            android:imeActionLabel="Done">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/signUp_password_et"
                android:imeOptions="actionDone"
                android:lines="1"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:drawableStart="@drawable/password_icon"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/sign_up_text"
            android:textSize="40sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:textColor="#fff"
            app:cornerRadius="40dp"
            android:backgroundTint="@color/ColorSecondaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>