<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.Profile">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/profileToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:titleTextColor="#fff"
            app:title="@string/profile_toolbar_text"
            android:textAlignment="viewStart"
            android:background="@color/colorPrimaryDark"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profileRV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/profileInfoLayout"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/profileToolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/profileInfoLayout">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/profile_email_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textSize="30sp"
                    android:textColor="#000"
                    android:id="@+id/profile_emailTV"/>
            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="30sp"
                    android:paddingEnd="30dp"
                    android:paddingStart="6dp"
                    android:textColor="#000"
                    android:id="@+id/profile_email"
                    android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/profile_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:textColor="#000"
                    android:id="@+id/profile_nameTV"/>
            <TextView
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="30sp"
                    android:paddingEnd="30dp"
                    android:paddingStart="5dp"
                    android:textColor="#000"
                    android:id="@+id/profile_name"
                    android:layout_marginStart="10dp"/>
        </LinearLayout>

        <TextView
                android:paddingTop="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="Lost dog posters you reported:"
                android:textColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvLabel"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>